--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html>
 
 <head>
-<title>Linux</title>
+<title>IT</title>
+<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
 	<h1 align="left">Main menu</h1>
+	<ol>
+		<a href="css.html"><li>CSS</li></a>  
+	</ol>
 </body>
 
 </html>
